# PureHook

./: CMakeLists.txt  LICENSE  README.md  example.txt
PureHook/: CMakeLists.txt  MemoryUtils.cpp  MemoryUtils.h  PureHook.cpp  PureHook.h  README.md  Trampoline.cpp  Trampoline.h
